tests/evaluator/should_fail/datatype_alphabets.csp
datatype Y = X.{0..1}

test1 = (X.2) == (X.2)
